[package]
name = "terraingen2"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", features = ["wayland"]}
bevy_flycam = "0.13.0"
bevy_rapier3d = "0.26.0"
block-mesh = "0.2.0"
fastnoise-lite = "1.1.1"
ilattice = { version = "0.3.0", features = ["glam", "morton-encoding"] }
image = "0.25.1"
ndcopy = "0.3.0"
ndshape = "0.3.0"
rand = "0.8.5"
rand_distr = "0.4"
